fixing header padding on mobile

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -156,7 +156,6 @@
 
     @include for-phone-landscape {
       @include font-size-l-xxx;
-      padding-top: $spacing-00-50;
     }
   }
 
